@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: August 17, 2008</p>
+      <p>Last Updated: August 19, 2008</p>
     </td>
   </tr>
 </table>
@@ -1049,6 +1049,7 @@ nuttx-0.3.13 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* NSH now supports last exit status $?
 	* NSH now supports if-then[-else]-fi construct
 	* NSH now supports comments beginning with '#'
+	* NSH now supports commands to inspect and modify memory
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
